<resources>
    <string name="app_name">Grab</string>
    <string name="fastbuy">สั่งเลย</string>
    <string name="openBag">เปิดใช้งานกระเป๋า</string>
    <string name="point">0 Point</string>
    <string name="food">อาหาร</string>
    <string name="transport">เดินทาง</string>
    <string name="market">ร้านค้า</string>
    <string name="pagket">แพ็กเกจ</string>
    <string name="fastDelivery">ส่งด่วน</string>
    <string name="craditCard">บัตรกำนัล</string>
    <string name="promotion">โปรโมชัน</string>
    <string name="other">เพิ่มเติม</string>
    <string name="menuForYou">เมนูสำหรับคุณ</string>
    <string name="chGrab">ค้นหาในแอป Grab</string>
    <string name="empty_food">สั่งของว่างจาก</string>
    <string name="educateOther">ศึกษาเพิ่มเติม</string>
    <string name="mega_sale_60">MEGA SALE ลดสูงสุด 60%</string>
    <string name="lowPrice">ร้านลดแล้ว เราลดให้อีก</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="findFood">ค้นหาสินค้า</string>

    <string-array name="city_list">
        <item>Bangkok</item>
        <item>London</item>
        <item>Paris</item>
        <item>Singapore</item>
        <item>New York</item>
        <item>Istanbul</item>
        <item>Dubai</item>
        <item>Kuala Lumpur</item>
        <item>Hong Kong</item>
        <item>Barcelona</item>

    </string-array>
    <string name="title_activity_add_data_sqlite">AddDataSQLite</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="addFood">เพิ่มอาหาร</string>
    <string name="showfood">แสดงข้อมูลอาหาร</string>
    <string name="foodDetell">รายละเอียดอาหาร</string>
    <string name="priceFood">ราคาอาหาร</string>
    <string name="nameFood">ชื่ออาหาร</string>
    <string name="title_activity_show_food_page">ShowFoodPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>